Update admin fragments
Added support for navigation using NavController

Replaced EventType and Category card adapters with CardRecyclerViewAdapter

Replaced usage of CategoryResponseDTO and GetEventTypeResponseDTO as they have identical attributes as Category and EventType models -> deleted those DTO classes as they are redundant

NOTE: As mentioned before CategoryManagementFragment had weird behaviour when it was moved to new package, it is displayed as a new file instead of modified one